# eyes

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
eyes/: main.py
