[tool.poetry]
name = "eyes"
version = "0.1.0"
description = ""
authors = ["Spyros Roum <spyros.roum@posteo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litestar = "^2.3.2"
uvicorn = { extras = ["standard"], version = "^0.24.post1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

